--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "discriminators/detect-gpt"]
 	path = discriminators/detect-gpt
 	url = https://github.com/eric-mitchell/detect-gpt
+	ignore = dirty
