--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,10 @@
 name: proj
 channels:
+  - huggingface
   - pytorch
   - nvidia
   - defaults
-  - conda-forge
+  # - conda-forge
 dependencies:
 # - nvidia::cudatoolkit
 - torchvision
@@ -14,4 +15,5 @@ dependencies:
 - matplotlib
 - tqdm
 - scikit-learn
-- openai
+- conda-forge::openai
+- ipykernel
