--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,7 @@ channels:
   - defaults
   - conda-forge
 dependencies:
-# - nvidia::cudatoolkit
+- nvidia::cudatoolkit
 - torchvision
 - pytorch::pytorch
 - numpy
